--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.4.0+9
+  firebase_core: ^1.7.0
   # firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+5
+  firebase_auth: ^3.1.3
+  cloud_firestore: ^2.5.3
 
 
 
